--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,20 +2,32 @@
 <html lang="en">
 <head>
     <head>
-        <%- include("./partials/head.ejs", {title: "Edit Budget Item"}) %>
+        <%- include("./partials/head.ejs", {title: "Update Pokemon"}) %>
     </head>
 </head>
 <body>
     
     <div class="container">     
-        <h1>Update Budget Item</h1>
-
-            <form action="/budgets/<%= index %>?_method=PUT" method="POST">
-                Date: <input type="text" name="date" value="<%=budgetItem.date%>"><br>
-                Name: <input type="text" name="name" value="<%=budgetItem.name%>"><br>
-                From: <input type="text" name="from" value="<%=budgetItem.from%>"><br>
-                Amount: <input type="number" name="amount" value="<%=budgetItem.amount%>"><br>
-                Tags: <input type="text" name="tags" size="50" value="<%=budgetItem.tags.toString()%>"><br>
+        <h1>Update Pokemon</h1>
+            <form action="/Pokedex/<%= index %>?_method=PUT" method="POST">
+                <div class="basic">
+                    <h4>Basic Pokemon Information</h4>
+                    Name: <input type="text" name="name" value="<%=pokemonInfo.name%>"><br>
+                    Image: <input type="text" name="img" size="50" value="<%=pokemonInfo.img%>"><br>
+                </div>
+                <hr><br>
+                <div class="type">
+                    <h4>Types</h4>
+                    <% Object.entries(pokemonInfo.type).forEach((v, index) =>{ %>
+                    <input type="text" name="type" value="<%=pokemonInfo.type[index]%>"><br>
+                    <% }) %> 
+                    <!-- <input type="text" name="type" placeholder="add New Type">
+                    <button>Add Another Type</button> -->
+                </div>
+                <hr><br>
+                
+<!-- 
+                Type: <input type="text" name="type" size="50" value="<%=pokemonInfo.type.toString()%>"><br> -->
                 <input type="submit" value="UPDATE">
             </form>
     </div>
