--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <script src="/static/app.js" defer></script>
+  <!-- <script src="/static/app.js" defer></script> -->
   <link rel="stylesheet" href="/static/styles.css">
   <link rel="stylesheet" href="/static/skeleton.css">
   <link rel="stylesheet" href="/static/styles.css">
