--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,39 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <head>
-        <%- include("./partials/head.ejs", {title: "View Budget Item"}) %>
+        <%- include("./partials/head.ejs", {title: "View Pokemon"}) %>
     </head>
 </head>
 <body>
     <div class="container">
-     <h1><%=budgetItem.name%></h1>
-        <a href="/budgets"><button type="button">BACK</button></a>
-        <a href="/budgets/<%= index %>/edit"><button>EDIT</button></a>
+        <h1><%=pokemonInfo.name%></h1>
+        <div>
+            <a href="/Pokedex"><button type="button">BACK</button></a>
+            <a href="/Pokedex/<%= index %>/edit"><button>EDIT</button></a>
+        </div>
+        <div>
+            <img src="<%=pokemonInfo.img%>"  alt="<%=pokemonInfo.name%>">
+        </div>
+        <div class="type">
+            <ul>Pokemon Types</ul>
+            <% pokemonInfo.type.forEach((v, index) =>{ %>
+                <li class="type"> <%=v%></li>              
+            <% }) %> 
+        </div>
+        <div class="stats">
+            <ul>Pokemon Stats</ul> 
+                <% Object.entries(pokemonInfo.stats).forEach((v, index) =>{ %>                
+                    <li class="stats"><%=v[0]%>: <%=v[1]%></li>
+                <% }) %>
+        </div>
 
-        <table>
-            <tr>
-                <td class="first-child">date</td>
-                <td class="first-child"><%=budgetItem.date%></td>
-            </tr>
-            <tr>
-                <td class="first-child">name</td>
-                <td class="first-child"><%=budgetItem.name%></td>
-            </tr>
-            <tr>
-                <td class="first-child">from</td>
-                <td class="first-child"><%=budgetItem.from%></td>
-            </tr>
-            <tr>
-                <td class="first-child">amount</td>
-                <td class="first-child"><%=budgetItem.amount%></td>
-            </tr>
-            <tr>
-                <td class="first-child">tags</td>    
-                <td class="first-child"><%=budgetItem.tags.toString()%></td>
-            
-            </tr>
-        </table>
+        <div class="damages">
+            <ul>Pokemon Damages</ul> 
+                <%  Object.entries(pokemonInfo.damages).forEach((v, index) =>{ %>                
+                        <li class="damages"><%=v[0]%>: <%=v[1]%></li>
+                <% }) %>
+        </div>
     </div>
+
      
 </body>
 </html>
