--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include("./partials/header.ejs", {title: "Edit Pokemon"}) %> 
     <div buttoneditdiv>
-        <a href="/Pokedex"><button type="button" id="buttonedit">Home</button></a><br>
+        <a href="/Pokedex"><button type="button" id="buttonedit" class="home">Home</button></a><br>
         <a href="/Pokedex/<%=index%>"><button type="button" id="buttonedit">Show</button></a>
         <input id="buttonedit" type="submit" value="UPDATE">
     </div>
