changed show buttons to view

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
     <%- include("./partials/header.ejs", {title: "Edit Pokemon"}) %> 
     <div buttoneditdiv>
         <a href="/Pokedex"><button type="button" id="buttonedit" class="home">Home</button></a><br>
-        <a href="/Pokedex/<%=index%>"><button type="button" id="buttonedit">Show</button></a>
+        <a href="/Pokedex/<%=index%>"><button type="button" id="buttonedit">View</button></a>
         <input id="buttonedit" type="submit" value="UPDATE">
     </div>
 
