--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <div class="info-container">   
                 <h4><b><%=v.name%></b></h4>
                 <div class="buttons">
-                    <a href="/Pokedex/<%=index%>"><button type="button" id="button">Show</button>
+                    <a href="/Pokedex/<%=index%>"><button type="button" id="button">View</button>
                     </a>
                     <a href="/Pokedex/<%=index%>/edit"><button type="button" id="button">Edit</button>
                     </a>
