--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,12 @@
     <%- include("./partials/head.ejs", {title: "Pokedex"}) %>
 <body>
     <%- include("./partials/header.ejs", {title: "Pokedex"}) %>       
-    <div>
+    <div id="grid-row-2">
             <a href="/Pokedex/new" >
-                <button type="button" id="buttonedit">Add a New Pokemon</button>
+                <button type="button" id="button-grid-2">Add a New Pokemon</button>
             </a>
     </div>
-    <div class="papa-container">
+    <div id="grid-row-3">
         <% allpokemon.forEach((v, index) =>{ %>           
         <div id="card">
             <a  href="/Pokedex/<%=index%>">
@@ -20,9 +20,6 @@
                     <a href="/Pokedex/<%=index%>"><button type="button" id="button">View</button>
                     </a>
                     <a href="/Pokedex/<%=index%>/edit"><button type="button" id="button">Edit</button>
-                    </a>
-                    <form action="/Pokedex/<%= index %>?_method=DELETE" method="POST" >
-                        <input id="button" type="submit" value="Delete">
                     </a>
                 </div>
             </div>
