--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,7 +12,7 @@
             <fieldset>
                 <legend>Basic Information</legend>
                 <div class="basic">
-                    Name: <input type="text" name="name" placeholder="pokemon name">
+                    Name: <input type="text" name="name" placeholder="pokemon name"><br>
                     Image: <input type="text" name="img" size="50" placeholder="pokemon image address"><br>
                 </div>
             </fieldset>
