--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,7 @@
     <div buttoneditdiv>
         <a href="/Pokedex"><button type="button" id="buttonedit" class="home">Home</button></a><br>
         <a href="/Pokedex/<%=index%>"><button type="button" id="buttonedit">View</button></a>
-        <input id="buttonedit" type="submit" value="UPDATE">
+   
     </div>
 
     <div class="container">     
@@ -43,7 +43,7 @@
                         <% }) %> 
                 </div>
             </fieldset>
-
+            <input id="button" type="submit" value="UPDATE">
             </form>
     </div>
 </body>
